<resources>
    <string name="app_name">JuegoRazasPelajesZampelungheBrañeiro</string>
    <string name="imageHelp">Ayuda</string>
    <string name="imageSettings">Configuración</string>
    <string name="imageCedica">CEDICA</string>
    <string name="title">Razas y pelajes</string>
    <string name="buttonPlay">Jugar</string>
    <string name="buttonRecognition">Reconocimiento</string>
    <string name="buttonBack">Volver</string>

    <string name="talking">Escuchar</string>
    <string name="caballo">Caballo</string>
    <string name="raza_x">Raza X</string>
    <string name="raza_y">Raza Y</string>
    <string name="raza_z">Raza Z</string>
    <string name="description">Descripcion del caballo mostrado en la foto lorem lpsum es simplemente un texto de relleno de las imprentas y archivos de texto...</string>
    <string name="config_lista">Lista</string>
    <string name="config_grilla">Grilla</string>
    <string name="modo_reconocimiento">Modo reconocimiento</string>
    <string name="modo_interaccion"> Modo interaccion</string>
    <string name="config_ajustes"> Ajustes</string>
    <string name="config_minijuego"> Minijuego</string>
    <string name="config_minijuego_1">Razas y pelajes</string>
    <string name="config_minijuego_2">Razas y pelajes juntas</string>
    <string name="config_minijuego_3">Cruza</string>

    <string name="config_interaccion_a">Interaccion A</string>
    <string name="config_interaccion_b">Interaccion B</string>
    <string name="config_interaccion_c">Interaccion C</string>

    <string name="config_ajustes_nivel_1">Nivel 1</string>
    <string name="config_ajustes_nivel_2">Nivel 2</string>

    <string name="config_ajustes_voz_masculina">Masculina</string>
    <string name="config_ajustes_voz_femenina">Femenina</string>
    <string name="nivel">Nivel</string>
    <string name="voz">Voz</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="to_next">Pasar al siguiente minijuego</string>
    <string name="retry">Volver a intentarlo</string>
</resources>
