<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#eeccff">


    <FrameLayout
        android:id="@+id/config_1"
        android:layout_width="250sp"
        android:layout_height="135sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="5dp">

        <RadioGroup
            android:id="@+id/config_reconocimiento_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:addStatesFromChildren="false"
            android:alwaysDrawnWithCache="false"
            android:animateLayoutChanges="false"
            android:animationCache="false"
            android:checkedButton="@+id/config_lista">

            <TextView
                android:id="@+id/config_reconocimiento_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffcccc"
                android:text="@string/modo_reconocimiento"
                android:textColor="#000000" />

            <RadioButton
                android:id="@+id/config_grilla"
                android:layout_width="122dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/config_grilla"
                android:textColor="#000000" />

            <RadioButton
                android:id="@+id/config_lista"
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/config_lista"
                android:textColor="#000000" />
        </RadioGroup>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/config_2"
        android:layout_width="250sp"
        android:layout_height="135sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="272dp"
        android:layout_marginLeft="272dp"
        android:layout_marginTop="5dp">

        <RadioGroup
            android:id="@+id/config_interaccion{_radio"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/config_minijuego_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffcccc"
                android:text="@string/config_minijuego"
                android:textColor="#000000" />

            <RadioButton
                android:id="@+id/config_minijuego_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="RadioButton"
                android:textColor="#000000"
                tools:text="@string/config_minijuego_1" />

            <RadioButton
                android:id="@+id/config_minijuego_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="RadioButton"
                android:textColor="#000000"
                tools:text="@string/config_minijuego_2" />

            <RadioButton
                android:id="@+id/config_minijuego_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="RadioButton"
                android:textColor="#000000"
                tools:text="@string/config_minijuego_3" />
        </RadioGroup>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/config_3"
        android:layout_width="250sp"
        android:layout_height="135sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="150dp">

        <RadioGroup
            android:id="@+id/config_minijuego_radio"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/config_interaccion_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffcccc"
                android:text="@string/modo_interaccion"
                android:textColor="#000000" />

            <RadioButton
                android:id="@+id/config_interaccion_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="RadioButton"
                android:textColor="#000000"
                tools:text="@string/config_interaccion_a" />

            <RadioButton
                android:id="@+id/config_interaccion_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="RadioButton"
                android:textColor="#000000"
                tools:text="@string/config_interaccion_b" />

            <RadioButton
                android:id="@+id/config_interaccion_c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="RadioButton"
                android:textColor="#000000"
                tools:text="@string/config_interaccion_c" />
        </RadioGroup>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/config_4"
        android:layout_width="250sp"
        android:layout_height="135sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="270dp"
        android:layout_marginLeft="270dp"
        android:layout_marginTop="150dp">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/config_ajustes_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#ffcccc"
                android:text="@string/config_ajustes"
                android:textColor="#000000" />

            <Switch
                android:id="@+id/config_ajustes_nivel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:switchMinWidth="100sp"
                android:text="@string/config_ajustes_nivel_1"
                android:textOff="@string/config_ajustes_nivel_1"
                android:textOn="@string/config_ajustes_nivel_2" />

            <Switch
                android:id="@+id/config_ajustes_voz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/config_ajustes_voz_masculina"
                android:textOff="@string/config_ajustes_voz_femenina"
                android:textOn="@string/config_ajustes_voz_masculina" />
        </RadioGroup>
    </FrameLayout>

</RelativeLayout>