<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffbf40">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="375dp"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="@dimen/frame_principal_width"
                    android:layout_height="@dimen/frame_principal_heigth"
                    android:layout_marginStart="@dimen/frame_principal_ml"
                    android:layout_marginLeft="@dimen/frame_principal_ml"
                    android:layout_marginTop="@dimen/frame_principal_mt"
                    android:layout_marginEnd="@dimen/frame_principal_mt"
                    android:layout_marginRight="@dimen/grilla_frame_mr">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/b_texto_ml"
                        android:layout_marginLeft="@dimen/b_texto_ml"
                        android:layout_marginTop="@dimen/b_texto_mt"
                        android:text="@string/raza_x"
                        android:textSize="@dimen/lista_text_size" />

                    <ImageButton
                        android:id="@+id/listImagenBtn4"
                        android:layout_width="@dimen/b_imagen_voz_width"
                        android:layout_height="@dimen/b_imagen_voz_height"
                        android:layout_marginStart="@dimen/b_imagen_voz_ml"
                        android:layout_marginLeft="@dimen/b_imagen_voz_ml"
                        android:layout_marginTop="@dimen/b_imagen_voz_mt"
                        android:contentDescription="@string/talking"
                        app:srcCompat="@drawable/audio_regular" />

                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/interaccion_b_row"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/grilla_imagen_heigth"
                    android:layout_marginStart="@dimen/grilla_imagen_ml"
                    android:layout_marginLeft="@dimen/grilla_imagen_ml"
                    android:layout_marginTop="@dimen/b_imagen_caballo_mt"
                    android:layout_marginEnd="@dimen/grilla_imagen_mr"
                    android:layout_marginRight="@dimen/grilla_imagen_mr"
                    android:layout_weight="1"
                    android:contentDescription="@string/caballo"
                    app:srcCompat="@drawable/angola-spc-zainocolorado" />

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/grilla_imagen_heigth"
                    android:layout_marginStart="@dimen/grilla_imagen_ml"
                    android:layout_marginLeft="@dimen/grilla_imagen_ml"
                    android:layout_marginTop="@dimen/b_imagen_caballo_mt"
                    android:layout_marginEnd="@dimen/grilla_imagen_mr"
                    android:layout_marginRight="@dimen/grilla_imagen_mr"
                    android:layout_weight="1"
                    android:contentDescription="@string/caballo"
                    app:srcCompat="@drawable/angola-spc-zainocolorado" />

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/grilla_imagen_heigth"
                    android:layout_marginStart="@dimen/grilla_imagen_ml"
                    android:layout_marginLeft="@dimen/grilla_imagen_ml"
                    android:layout_marginTop="@dimen/b_imagen_caballo_mt"
                    android:layout_marginEnd="@dimen/grilla_imagen_mr"
                    android:layout_marginRight="@dimen/grilla_imagen_mr"
                    android:layout_weight="1"
                    android:contentDescription="@string/caballo"
                    app:srcCompat="@drawable/angola-spc-zainocolorado" />

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/grilla_imagen_heigth"
                    android:layout_marginStart="@dimen/grilla_imagen_ml"
                    android:layout_marginLeft="@dimen/grilla_imagen_ml"
                    android:layout_marginTop="@dimen/b_imagen_caballo_mt"
                    android:layout_marginEnd="@dimen/grilla_imagen_mr"
                    android:layout_marginRight="@dimen/grilla_imagen_mr"
                    android:layout_weight="1"
                    android:contentDescription="@string/caballo"
                    app:srcCompat="@drawable/angola-spc-zainocolorado" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>